# cmor4

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/api/: Axis.rst  Cmor4Result.rst  ControlledVocabulary.rst  DatasetInfo.rst  Grid.rst  ProjectTables.rst  Variable.rst  ZFactor.rst  classes.rst  exceptions.rst  functions.rst
notebooks/: 01_basic_ocean_surface_temperature.ipynb  02_atmos_surface_air_temperature.ipynb  03_pressure_level_air_temperature.ipynb  04_hybrid_sigma_humidity_tendency.ipynb  05_ocean_heat_transport_by_basin.ipynb  06_land_use_fraction.ipynb  07_non_lat_lon_sea_ice_concentration.ipynb  README.md
src/cmor4/: __init__.py  _axis_validation.py  _table_utils.py  _templates.py  _time_utils.py  _variable_validation.py  axis.py  core.py  cv.py  dataset.py  exceptions.py  grid.py  metadata.py  tables.py  variable.py  zfactor.py
tests/: table_helpers.py  test_cmor4.py  test_dataset_guides.py  test_project_tables.py
tools/: rebuild_notebook_output.sh
