[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cmor4"
version = "0.1.0"
description = "Class-driven CMOR-like NetCDF writer built on xarray."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "cmor4 contributors" },
]
dependencies = [
  "cftime>=1.6",
  "numpy>=1.24",
  "xarray>=2024.1",
  "netCDF4>=1.6",
]

[project.optional-dependencies]
notebook = [
  "jupyterlab>=4",
  "matplotlib>=3.8",
  "basemap>=2",
  "pyproj>=3.7",
  "nbstripout>=0.9",
]
dev = [
  "pycodestyle>=2.14",
  "sphinx>=7.0",
  "sphinx-autobuild>=2024.0",
  "furo>=2024.0",
]

[tool.setuptools.packages.find]
where = ["src"]
